# Pantin-Studio

./: .gitignore  .gitmodules  InitRepository.cmake  README.md  init.sh
resources/: pantin-studio.qrc
resources/images/icons/: nigel.icns
source/: CMakeLists.txt
source/inc/: Pantin.hpp
source/src/: Pantin.cpp
